--- a/package.json
+++ b/package.json
@@ -10,9 +10,14 @@
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.4",
-    "react": "^18.1.0",
-    "react-dom": "^18.1.0",
+    "react": "^16.8.5",
+    "react-beautiful-dnd": "^13.1.0",
+    "react-dom": "^16.8.5",
+    "react-hook-form": "^7.31.2",
     "react-scripts": "5.0.1",
+    "recoil": "^0.7.3-alpha.2",
+    "recoil-persist": "^4.2.0",
+    "styled-components": "^5.3.5",
     "typescript": "^4.6.4",
     "web-vitals": "^2.1.4"
   },
@@ -39,5 +44,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-beautiful-dnd": "^13.1.2",
+    "@types/styled-components": "^5.1.25"
   }
 }
